--- a/index.html
+++ b/index.html
@@ -10,43 +10,20 @@
 <body>
 
 <div class="container one"> 
-   <div class="heal">
-    <img src="images/fishh.png" alt="a logo saying only fish" class="image">
-</div>
-    <div class="meow">
+   
+  <img src="./images/fishh.png" alt="only fish" class="top">
+  </div>   
 
-    <div class="hmm">
-        <p>about</p>
-        <p>location</p>
-        <p>contact</p>
-    </div>
-</div>
-   <div class="desk">
-<img src="images/fish smirk.jpg" alt="smirking fish" class="smirk">
-
-
-
-
-   </div>
-
-</div>
-
-<div class="container two">
-    <h1>Lorem ipsum</h1>
-    
-<div class="halo">
-    <img src="images/doryy.png" alt="a blue animated fish" class="imagee">
-    <p>fish but has the memory of a gold fish</p>
-</div>
-
-</div>
+<div class="container two"></div>
 
 
 <div class="container three"></div>
 
 <div class="container four"></div>
 
-<div class="container five"></div>
+<div class="container five">
+     <div class="copyright">Copyright © Only FIsh</div>
+</div>
 
 
 
